Finesse blur effect to avoid shadowed edges & whitespace

--- a/web/profiles/utexas/modules/git_managed/utexas_layouts/layouts/background-accent.css
+++ b/web/profiles/utexas/modules/git_managed/utexas_layouts/layouts/background-accent.css
@@ -7,6 +7,7 @@
 
 /* Prevent images with height:100% from overflowing their container */
 .background-accent {
+  overflow:hidden;
   position:relative;
 }
 
